# DestinyCoreNew

./: diff.txt
sql/updates/hotfixes/: 2026_02_08_00_hotfixes.sql
src/server/scripts/: CMakeLists.txt  ScriptLoader.cpp
src/server/scripts/Argus/: argus_script_loader.cpp  paraxis.cpp  zone_antoran_wastes.cpp  zone_krokuun.cpp  zone_macaree.cpp
src/server/scripts/Argus/AntorusTheBurningThrone/: antorus.h  boss_aggramar.cpp  boss_antoran.cpp  boss_coven_shivarres.cpp  boss_eonar.cpp  boss_felhounds.cpp  boss_hasabel.cpp  boss_imonar.cpp  boss_kingaroth.cpp  boss_varimathras.cpp  boss_worldbreaker.cpp  instance_antorus.cpp
src/server/scripts/Argus/TheSeatOfTheTriumvirate/: boss_lura.cpp  boss_saprish.cpp  boss_viceroy_nezhar.cpp  boss_zuraal_the_ascended.cpp  instance_the_seat_of_the_triumvirate.cpp  the_seat_of_the_triumvirate.h
src/server/scripts/BattlePay/: battlepay_script_loader.cpp
src/server/scripts/BrawlersGuild/: brawlersguild_script_loader.cpp
src/server/scripts/BrokenIsles/: brokenisles_script_loader.cpp
src/server/scripts/ClassHalls/: class_hall_dh.cpp  class_hall_dk.cpp  class_hall_druid.cpp  class_hall_hunter.cpp  class_hall_mage.cpp  class_hall_monk.cpp  class_hall_paladin.cpp  class_hall_priest.cpp  class_hall_rogue.cpp  class_hall_script_loader.cpp  class_hall_shaman.cpp  class_hall_warlock.cpp  class_hall_warrior.cpp
src/server/scripts/Commands/: cs_event.cpp  cs_script_loader.cpp
src/server/scripts/Custom/: custom_script_loader.cpp
src/server/scripts/Draenor/: draenor_script_loader.cpp
src/server/scripts/EasternKingdoms/: easternkingdoms_script_loader.cpp
src/server/scripts/Events/: events_script_loader.cpp
src/server/scripts/Garrison/: garrison_general.cpp  garrison_instance.cpp  garrison_script_loader.cpp
src/server/scripts/Invasions/: invasion_dalaran.cpp  invasion_point_argus.cpp  invasion_point_world_bosses.cpp  invasions_script_loader.cpp
src/server/scripts/Kalimdor/: kalimdor_script_loader.cpp
src/server/scripts/Maelstrom/: maelstrom_script_loader.cpp
src/server/scripts/Northrend/: northrend_script_loader.cpp
src/server/scripts/OutdoorPvP/: OutdoorPVPScriptLoader.cpp
src/server/scripts/Outland/: outland_script_loader.cpp
src/server/scripts/Pandaria/: pandaria_script_loader.cpp
src/server/scripts/PetBattle/: petbattle_abilities.cpp  petbattle_playerscript.cpp  petbattle_script_loader.cpp  petbattle_trainer.cpp
src/server/scripts/Scenario/: scenario_script_loader.cpp
src/server/scripts/Spells/: spell_script_loader.cpp
src/server/scripts/World/: world_script_loader.cpp
(+8 files in other folders)
